# simple-matrix

./: Cargo.toml  LICENSE-MIT  README.md
benches/: bench.rs
src/: lib.rs  matrix.rs  tests.rs
src/matrix/: basic_op.rs  from.rs  iter.rs  mod.rs  std_ops.rs
src/tests/: qcheck.rs
tests/: qcheck.rs
