cargo-features = ["edition"]

[package]
edition = '2018'
name = "simple-matrix"
version = "0.1.1"
authors = ["Nicolas Mémeint <nicolas.memeint@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/NicolasMemeint/simple-matrix"
documentation = "https://docs.rs/simple-matrix"
homepage = "https://github.com/NicolasMemeint/simple-matrix"
description = "A simple generic matrix library"
categories = ["data-structures"]
keywords = ["simple", "matrix", "matrices"]

[package.metadata.docs.rs]
rustdoc-args = [ "--edition=2018" ]

[lib]
doctest = false

[features]
impl_from = []

[dev-dependencies]
rand = "0.5"
criterion = "0.2"
quickcheck = "0.6"

[[bench]]
name = "bench"
harness = false
